# SensingMyself

./: .gitignore  readme.md
SensingMyselfDevice/: SensingMyselfDevice.sln
SensingMyselfDevice/HeartRate4/: HeartRate4.c  HeartRate4.vcxproj  HeartRate4.vcxproj.filters
SensingMyselfDevice/SensingMyselfDevice/: CMakeLists.txt  SensingMyselfDevice.vcxproj  SensingMyselfDevice.vcxproj.filters  app_manifest.json  azure_iot_utilities.c  connection_strings.h  launch.vs.json  main.c  mt3620_avnet_dev.h  oledc_hal.c  oledc_hal.h
SensingMyselfWindows/DataPlaneClient/: DataPlaneClient.csproj  packages.config
SensingMyselfWindows/SensingMyself/: SensingMyself.sln
SensingMyselfWindows/SensingMyself/SensingMyself/: About.Designer.cs  About.cs  About.resx  App.config  Form1.Designer.cs  Form1.cs  HeartService.cs  Program.cs  Reading.cs  SensingMyself.csproj  Today.Designer.cs  Today.cs  packages.config
SensingMyselfWindows/SensingMyself/SensingMyself/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
